[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "Caracal"
version = "0.0.1"
authors = [
  { name="momomomomos", email="97729786+momomomomos@users.noreply.github.com" },
]
description = "A game engine built in pygame, that aims to let the programmer do the simple work. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/momomomomos/Caracal"
"Bug Tracker" = "https://github.com/momomomomos/Caracal/issues"